Add level command completions